--- a/css/styles.css
+++ b/css/styles.css
@@ -196,6 +196,9 @@ img {
 .hero {
   background: var(--hero-background-color);
   text-align: center;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  
 }
 
 .modal-btn {
@@ -203,13 +206,11 @@ img {
   font-size: 16px;
   font-family: inherit;
   line-height: 1.9;
-  letter-spacing: 0.06em;gn
-  text-align: center;
+  letter-spacing: 0.06em;
   cursor: pointer;
   color: var(--background);
   background: var(--accent-color);
   border: 0px;
-  margin-bottom: 200px;
   min-width: 200px;
   padding: 10px 32px;
 }
@@ -222,9 +223,7 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--background);
-  padding-top: 200px;
-  padding-bottom: 30px;
-
+  margin-bottom: 30px; 
 }
 
 .what-we-do {
@@ -244,7 +243,7 @@ img {
 
 
 .gallery-img {
-  flex-basis: calc(100% / 3 -30px);
+  flex-basis: calc(100% / 3 - 30px);
   margin-left: 30px;
   margin-top: 30px;
 }
@@ -270,7 +269,7 @@ img {
 }
 
 .quality-item {
-  flex-basis: calc(100% / 4 -30px);
+  flex-basis: calc(100% / 4 - 30px);
   margin-left: 30px;
   margin-top: 30px;
 }
@@ -315,13 +314,13 @@ img {
   flex-wrap: wrap;
   text-align: center;
   margin-left: -30px;
-  margin-top: -50px;
+  margin-top: -30px;
 }
 
 .team-item {
-  flex-basis: calc(100% / 4-30px);
+  flex-basis: calc(100% / 4 - 30px);
   margin-left: 30px;
-  margin-top: 50px;
+  margin-top: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
@@ -343,7 +342,9 @@ img {
 
 .team-person-wrapper {
   padding-top: 30px;
+  padding-right: 15px;
   padding-bottom: 30px;
+  padding-left: 15px;
   background-color: var(--background);
   border-radius: 0px 0px 4px 4px;
 }
@@ -362,12 +363,12 @@ img {
   padding: 60px 0px;
 }
 
-.footer-list:not(:last-child) {
-   margin-bottom: 9px;
+.footer-list-item:not(:last-child) {
+  margin-bottom: 9px;
 }
 
-.footer-list {
-  margin-top: 20px ;
+.footer .address {
+  margin-top: 20px;
 }
 
 .address-link {
@@ -402,8 +403,14 @@ img {
   border: 0px;
   background: var(--team-background);
   padding: 6px 22px;
-  margin-left: 8px;
+ 
 }
+
+.portfolio-button-item {
+ margin-left: 8px;
+
+}
+
 
 .portfolio-btn:hover,
 .portfolio-btn:focus {
@@ -415,14 +422,13 @@ img {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-bottom: 54px;
+  margin-bottom: 50px;
   margin-left: -8px;
-  padding-top: 94px;
-
 }
 
 .buttons {
   padding-bottom: 94px;
+  padding-top: 94px;
 }
 
 
@@ -432,7 +438,7 @@ img {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--color);
-  margin: 20px 24px 4px;
+  margin-bottom: 4px;
 }
 
 .portfolio-img-description {
@@ -440,33 +446,28 @@ img {
   line-height: 1.89;
   letter-spacing: 0.03em;
   color: var(--description-color);
-  margin-right: 24px;
-  margin-bottom: 20px;
-  margin-left: 24px;
 }
 
 .portfolio-cards {
   display: flex;
   flex-wrap: wrap;
   margin-left: -30px;
-  margin-top: -50px;
-
+  margin-top: -30px;
 }
 
 .portfolio-item {
- flex-basis: calc(100% / 3 -30px);
+ flex-basis: calc(100% / 3 - 30px);
   margin-left: 30px;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 
 .portfolio-card-description {
   background: var(--background);
-  border: 1px solid var(--portfolio-border-color) ;
+  border-right: 1px solid var(--portfolio-border-color);
+  border-bottom: 1px solid var(--portfolio-border-color);
+  border-left: 1px solid var(--portfolio-border-color);
   box-sizing: border-box;
-
-
-
-
+  padding: 20px 24px;
 }
 /*============ END PORTFOLIO ===========*/
